--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,13 @@ a:hover {
   text-decoration: none;
 }
 
+a:visited {
+  color: grey;
+  text-decoration: underline;
+  text-decoration-color: rgb(255, 172, 47);
+}
+
+
 p {
   padding-right: 2em;
   text-align: justify;
