--- a/css/styles.css
+++ b/css/styles.css
@@ -58,10 +58,11 @@ g {
   opacity: 1;
 }
 g:hover {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 g:visited {
-  border-color: rgb(255, 172, 47);
+  stroke: rgb(255, 172, 47);
+  stroke-width: 10px;
 }
 
 #mapsection {
